tests/neg/semantic_variadic_funcptr_call_unsupported.baa
// RUN: expect-fail
// EXPECT: نداء مؤشر دالة متغير المعاملات غير مدعوم حالياً

نوع جامع_متغير = دالة(صحيح، ...) -> صحيح.

صحيح اجمع_متغير(صحيح عدد، ...) {
    إرجع عدد.
}

صحيح الرئيسية() {
    جامع_متغير ف = اجمع_متغير.
    إرجع ف(١، ٢).
}
